[package]
name = "grweb"
version = "0.1.0"
edition = "2024"

[dependencies]
gorust = "0.1.2"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.0"  # 获取 CPU 核心数
mio = { version = "0.8", features = ["os-poll", "net"] }
crossbeam-channel = "0.5"

[dev-dependencies]
# 用于示例