[package]
name = "grweb"
version = "0.1.3"
edition = "2021"
authors = ["lijun <1489573464@qq.com>"]
description = "A high-performance Rust Web framework based on gorust coroutine runtime"
license = "MIT"
repository = "https://github.com/WLmutou/grweb"
homepage = "https://github.com/WLmutou/grweb"
documentation = "https://docs.rs/grweb"
readme = "README.md"
keywords = ["web", "framework", "async", "goroutine", "performance"]
categories = ["web-programming", "asynchronous"]

[dependencies]
gorust = "0.1.6"
grorm = "0.1.1"
grlog = "0.1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.0"
itoa = "1.0"
memchr = "2"
toml = "0.8"
sha1 = "0.10"

[dev-dependencies]
# 用于示例
